--- a/src/Teamup/MyClub.Teamup.Wpf/Themes/Teamup.Styles.xaml
+++ b/src/Teamup/MyClub.Teamup.Wpf/Themes/Teamup.Styles.xaml
@@ -1386,7 +1386,7 @@ Styles\Teamup.Training.xaml
       </MultiDataTrigger>
     </Style.Triggers>
   </Style>
-  <Style x:Key="Teamup.Styles.DropDownButton.TrainingSession.Info" BasedOn="{StaticResource MyNet.Styles.DropDownButton.Icon.MouseOver.Foreground}" TargetType="{x:Type my:DropDownButton}">
+  <Style x:Key="Teamup.Styles.DropDownButton.TrainingSession.Info" BasedOn="{StaticResource MyNet.Styles.DropDownButton.Icon.ToolTip}" TargetType="{x:Type my:DropDownButton}">
     <Setter Property="PopupHorizontalOffset" Value="0" />
     <Setter Property="ToggleContentTemplate">
       <Setter.Value>
